<resources>
    <string name="app_name">DayThreeAssignment</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="update_profile_picture">Update Profile Picture</string>
    <string name="full_name">Full Name</string>
    <string name="email_address">Email Address</string>
    <string name="phone_number">Phone Number</string>
    <string name="update">Update</string>
    <string name="password">Password</string>
    <string name="signup">SignUp</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="login">Login</string>
    <string name="change_password">Change Password</string>
    <string name="logout">Logout</string>
    <string name="lock_icon">Lock Icon</string>
    <string name="key_icon">Key Icon</string>
    <string name="group_of_people">Group of People</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="what_s_on_your_mind">What\'s on your mind..</string>
    <string name="post">Post</string>
    <string name="back_icon">Back Icon</string>
    <string name="update_password">Update Password</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="retype_password">Retype Password</string>
    <string name="no_more_posts_to_display">No posts to display</string>
</resources>